k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server # indicates that this will be the server
  template:
    metadata:
      labels:
        component: server # remember it has to match
    spec:
      containers:
      - name: server
        image: unusualcaspento/multi-server
        resources:
          limits:
              memory: "128Mi"
              cpu: "500m"
        ports:
        - containerPort: 5000
