k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 #this needs to be scaled
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
      - name: worker
        image: unusualcaspento/multi-worker
        resources:
          limits:
            memory: 2Gi
            cpu: "500m"
        env: #short for envionmental variables
          - name: REDIS_HOST
            value: redis-cluster-ip-service #name of the clusterip serives that redis needs to connect to
          - name: REDIS_PORT
            value: '6379'
